<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="under_development">Under Development</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="connection_lost">Connection lost</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="unknown">Unknown</string>
    <string name="exit_chat">Exit Chat</string>
    <string name="Are_you_sure_you_want_to_exit_from_this_chat">Are you sure you want to end this chat?</string>
    <string name="return_later">Return Later</string>
    <string name="end_chat">End Chat</string>
    <string name="end_chat_ques">End Chat?</string>
    <string name="not_sent_tap_to_retry">Not sent, Tap to retry</string>
    <string name="close_chat">Close Chat?</string>
    <string name="limit_exceed">Limit Exceed</string>
    <string name="okay">Okay</string>
    <string name="upload_file_max_size">Upload a file (maximum size: %1$s)</string>
    <string name="upload_files_max_size">Upload a file(s) (maximum size: %1$s)</string>
    <string name="selected_files_type_is_not_supported">The selected file type is not supported. Please choose a supported file type such as: %1$s.</string>


    <string name="select">Select</string>
    <string name="start_typing">Start Typing</string>
    <string name="additional_feedback">Additional Feedback</string>
    <string name="add_additional_feedback">Add additional feedback</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="view_response">View response</string>
    <string name="unsupported_file">Unsupported File Format</string>
    <string name="field_required">This field is required</string>
    <string name="quick_menu">Quick Menu</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="setting">Settings</string>
    <string name="restart">Restart Chat</string>
    <string name="sound">Sound</string>
    <string name="download_transcript">Download Transcript</string>
    <string name="language">Language</string>
    <string name="restart_chat">Restart Chat</string>
    <string name="confirm_restart_chat">Are you sure you want to restart the chat? This will clear your conversation and start a new chat.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="connection_error">Connection error.</string>
    <string name="retry"><u>Retry</u></string>
    <string name="session_timeout">Session Timeout</string>
    <string name="your_session_has_expired_due_to_inactivity">Your session has expired due to inactivity.</string>
    <string name="ok">OK</string>
    <string name="please_check_your_network_and_try_again">Please check your network and try again.</string>
    <string name="logout">Logout</string>
    <string name="you_have_been_logged_out">You have been logged out.</string>

    <string name="languages">Languages</string>
    <string name="transcripts">Transcripts</string>
    <string name="download">Download</string>
    <string name="please_provide_valid_email">Please provide valid email</string>
    <string name="send_transcript">Send Transcript</string>
    <string name="camera">Camera</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="attach_from_device">Attach from device</string>
    <string name="chat_session_will_be_saved">Chat session will be saved and you can continue the conversation from where you left.</string>
    <string name="chat_will_end_you_wont_able_to_resume_later">Chat will end and you won\'t be able to resume later.</string>
    <string name="close">Close</string>
    <string name="thank_you">Thank You</string>
    <string name="for_completing_the_survey">for completing the survey</string>
    <string name="items_selected">%1$s items selected</string>
    <string name="email">Email</string>
    <string name="format">Format: %1$s</string>
    <string name="submitted">Submitted</string>
    <string name="unable_to_open_the_link">Unable to open the link: %1$s</string>
    <string name="today">Today</string>
    <string name="successfully_signed_in">Successfully Signed In!</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="transcript_sent_to_successfully">Transcript sent to %1$s successfully</string>
    <string name="downloading_file">Downloading File</string>
    <string name="download_complete">Download Complete</string>
    <string name="enter_email">Enter Email</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="ask_a_question">Ask a question...</string>

</resources>