<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/bg_rounded_white"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingBottom="8dp"
        android:text="Title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="Subtitle"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constTranscript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/transcripts"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/checkboxTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTranscript" />

        <TextView
            android:id="@+id/tvSendTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_transcript"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkboxTranscript"
            app:layout_constraintStart_toEndOf="@+id/checkboxTranscript"
            app:layout_constraintTop_toTopOf="@+id/checkboxTranscript"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSendTranscript"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvSendTranscript">

            <ImageView
                android:id="@+id/icon_download"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/download_transcript"
                android:src="@drawable/ic_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/download"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/icon_download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_download"
                app:layout_constraintTop_toTopOf="@id/icon_download" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_email"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSendTranscript">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_stroke_rounded_white"
                android:gravity="center|start"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:padding="12dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"

                />

            <TextView
                android:id="@+id/tvErrorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/error_color"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
