<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="10dp">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="Close Chat?"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewEndChat"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="#0F000000"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Radio Group -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewEndChat">

        <!-- First Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioReturnLater"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:buttonTint="@color/black"
                android:text="Return Later :"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/subtextReturnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/chat_session_will_be_saved"
                android:textColor="@color/gray"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:id="@+id/viewReturnLater"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="#0F000000"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <!-- Second Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioEndChat"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:buttonTint="@color/black"
                android:text="End Chat :"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/subtextEndChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/chat_will_end_you_wont_able_to_resume_later"
                android:textColor="@color/gray"
                android:textSize="13sp"/>
        </LinearLayout>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constTranscript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/transcripts"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/checkboxTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTranscript" />

        <TextView
            android:id="@+id/tvSendTranscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_transcript"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkboxTranscript"
            app:layout_constraintStart_toEndOf="@+id/checkboxTranscript"
            app:layout_constraintTop_toTopOf="@+id/checkboxTranscript"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvSendTranscript"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvSendTranscript">

            <ImageView
                android:id="@+id/icon_download"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/download_transcript"
                android:src="@drawable/ic_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/download"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/icon_download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_download"
                app:layout_constraintTop_toTopOf="@id/icon_download" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSendTranscript">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_stroke_rounded_white"
                android:gravity="center|start"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColorHint="@color/hint_color"
                android:hint="@string/enter_email"
                android:textColor="@color/black"
                android:padding="12dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"

                />

            <TextView
                android:id="@+id/tvErrorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/error_color"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Confirm Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:paddingVertical="12dp"
        android:text="Confirm"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constTranscript" />
</androidx.constraintlayout.widget.ConstraintLayout>
