<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rowHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_rounded"
            android:contentDescription="@string/setting"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLineSetting"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/view_line_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowHeader" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLineSetting">

        <ImageView
            android:id="@+id/icon_language"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/language_en"
            android:src="@drawable/ic_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/language_en"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/icon_language"
            app:layout_constraintEnd_toStartOf="@id/icon_language_arrow"
            app:layout_constraintStart_toEndOf="@id/icon_language"
            app:layout_constraintTop_toTopOf="@id/icon_language" />

        <ImageView
            android:id="@+id/icon_language_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_forward"
            android:contentDescription="@string/language_en"
            app:layout_constraintBottom_toBottomOf="@id/icon_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_language" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLineLang"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/view_line_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLang" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLineLang">

        <ImageView
            android:id="@+id/icon_sound"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/language_en"
            android:src="@drawable/ic_sound"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sound"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/icon_sound"
            app:layout_constraintEnd_toStartOf="@id/toggle_sound"
            app:layout_constraintStart_toEndOf="@id/icon_sound"
            app:layout_constraintTop_toTopOf="@id/icon_sound" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_sound"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:textOff=""
            android:textOn=""
            app:trackTint="#41887B"
            app:thumbTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLineSound"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/view_line_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constSound" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLineSound">

        <ImageView
            android:id="@+id/icon_download"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/download_transcript"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/download_transcript"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/icon_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_download"
            app:layout_constraintTop_toTopOf="@id/icon_download" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLineDownload"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/view_line_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constDownload" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLineDownload">

        <ImageView
            android:id="@+id/icon_restart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/restart"
            android:src="@drawable/ic_restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_restart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/restart"
            android:textSize="14sp"
            android:textColor="#FF7661"
            app:layout_constraintBottom_toBottomOf="@id/icon_restart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_restart"
            app:layout_constraintTop_toTopOf="@id/icon_restart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
